pkp/pkp-lib#2965 Implement users API endpoint
