# docs/dev/swagger.yaml
@@ -24,6 +24,8 @@ schemes:
 tags:
   - name: "Submissions"
   - name: "Issues"
+  - name: "Users"
+    description: Only admins, journal managers and editors can access this endpoint.
   - name: "Backend"
     description: "Private endpoints for OJS UI."
 definitions:
@@ -452,6 +454,120 @@ definitions:
         type: integer
       roundId:
         type: integer
+  UserSummary:
+    type: object
+    properties:
+      id:
+        type: integer
+      _href:
+        type: string
+      userName:
+        type: string
+      email:
+        type: string
+      fullName:
+        type: string
+      orcid:
+        type: string
+      groups:
+        type: array
+        items:
+          $ref: '#/definitions/UserGroup'
+      disabled:
+        type: boolean
+  User:
+    type: object
+    properties:
+      id:
+        type: integer
+      userName:
+        type: string
+      fullName:
+        type: string
+      firstName:
+        type: string
+      middleName:
+        type: string
+      lastName:
+        type: string
+      initials:
+        type: string
+      saluation:
+        type: string
+      suffix:
+        type: string
+      affiliation:
+        $ref: '#/definitions/LocaleObject'
+      country:
+        type: string
+      url:
+        type: string
+      email:
+        type: string
+      orcid:
+        type: string
+      groups:
+        type: array
+        items:
+          $ref: '#/definitions/UserGroup'
+      interests:
+        type: array
+        items:
+          $ref: '#/definitions/UserInterest'
+      biography:
+        $ref: '#/definitions/LocaleObject'
+      signature:
+        $ref: '#/definitions/LocaleObject'
+      authId:
+        type: integer
+      authString:
+        type: string
+      gender:
+        type: string
+      phone:
+        type: string
+      mailingAddress:
+        type: string
+      billingAddress:
+        type: string
+      gossip:
+        $ref: '#/definitions/LocaleObject'
+      disabled:
+        type: boolean
+      disabledReason:
+        type: string
+      dateRegistered:
+        type: string
+      dateValidated:
+        type: string
+      dateLastLogin:
+        type: string
+      mustChangePassword:
+        type: boolean
+  UserGroup:
+    type: object
+    properties:
+      id:
+        type: integer
+      name:
+        $ref: '#/definitions/LocaleObject'
+      abbrev:
+        $ref: '#/definitions/LocaleObject'
+      roleId:
+        type: integer
+      showTitle:
+        type: boolean
+      permitSelfRegistration:
+        type: boolean
+      recommendOnly:
+        type: boolean
+  UserInterest:
+    type: object
+    properties:
+      id:
+        type: integer
+      interest:
+        type: string
   LocaleObject:
     type: object
     description: Key/value pairs containing strings by locale key.
@@ -725,6 +841,95 @@ paths:
           description: Issue details.
           schema:
             $ref: '#/definitions/Issue'
+
+  '/users':
+    get:
+      tags:
+        - Users
+      summary: Get a list of users.
+      description: |
+        In Progress.
+      parameters:
+        - name: roleIds
+          description: Filter the results by those who have one of these user role IDs.
+          in: query
+          required: false
+          type: string
+        - name: status
+          description: Filter results by active/disabled users. Must be one of `active`, `disabled`, `all`. Default is `active`.
+          in: query
+          required: false
+          type: string
+        - name: assignedToSubmission
+          description: Filter results by those assigned to this submission ID.
+          in: query
+          required: false
+          type: integer
+        - name: assignedToSection
+          description: Filter the results by those assigned as section editors to this section ID.
+          in: query
+          required: false
+          type: integer
+        - name: count
+          description: How many results to return in a single request. Default is `20`. Max is `100`.
+          in: query
+          required: false
+          type: integer
+        - name: offset
+          description: Offset the results returned. Use this to receive subsequent pages of requests. A `count` of `10` and `offset` of `15` will return results `15` to `25`.
+          in: query
+          required: false
+          type: integer
+        - name: orderBy
+          description: Order the results returned. Must be one of `id`, `familyName` or `givenName`. Default is `id`.
+          in: query
+          required: false
+          type: string
+        - name: orderDirection
+          description: Return the results in ascending or descending order. Must be `ASC` or `DESC`. Default is `DESC`.
+          in: query
+          required: false
+          type: string
+        - name: searchPhrase
+          description: Filter the results by a search phrase matched against the `userName`, `firstName`, `middleName`, `lastName`, `initials`, `salutation`, `suffix` and `email`.
+          in: query
+          required: false
+          type: string
+      responses:
+        '200':
+          description: List of users.
+          schema:
+            type: object
+            properties:
+              maxItems:
+                type: integer
+              items:
+                type: array
+                items:
+                  $ref: '#/definitions/UserSummary'
+        '403':
+          description: Only administrators, journal managers and editors are allowed to access users on this site.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+  '/users/{userId}':
+    get:
+      tags:
+        - Users
+      summary: Get a user by ID.
+      description: |
+        In progress.
+      parameters:
+        - name: userId
+          description: User ID
+          in: path
+          required: true
+          type: integer
+      responses:
+        '200':
+          description: User details.
+          schema:
+            $ref: '#/definitions/User'
 
   '/_submissions':
     get:
